[gd_scene load_steps=17 format=1]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://characters.png" type="Texture" id=2]
[ext_resource path="res://SwordArea.gd" type="Script" id=3]
[ext_resource path="res://SwordArea2.gd" type="Script" id=4]
[ext_resource path="res://sword.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 6.05676, 11.5023 )

[sub_resource type="Animation" id=2]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 46 ]
}

[sub_resource type="Animation" id=3]

resource/name = "Idle_climb"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 68 ]
}

[sub_resource type="Animation" id=4]

resource/name = "climb"
length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 65, 66, 67, 68 ]
}

[sub_resource type="Animation" id=5]

resource/name = "fall"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 55 ]
}

[sub_resource type="Animation" id=6]

resource/name = "jump_anim"
length = 0.01
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 50 ]
}

[sub_resource type="Animation" id=7]

length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 46, 47, 48, 49 ]
}

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 10, 38.5772 )

[sub_resource type="RectangleShape2D" id=9]

custom_solver_bias = 0.0
extents = Vector2( 10, 38.7625 )

[sub_resource type="Animation" id=10]

resource/name = "Switch"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -15.3037, 0.593167 ), Vector2( 15.3055, 0.593167 ) ]
}

[sub_resource type="Animation" id=11]

resource/name = "switchb"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 15.3055, 0.593167 ), Vector2( -15.3037, 0.593167 ) ]
}

[node name="Player" type="KinematicBody2D"]

transform/pos = Vector2( -0.583969, -0.291985 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 0.931809, 0, 0, 0.999811, 0.886482, -0.00274551 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
velocity = Vector2( 0, 0 )
speed = 2
Jump_force = 4
Min_jump_force = 2
max_speed = 3
gravity = 10
current_anim = "Idle"

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 0.583977, -3.21188 )
texture = ExtResource( 2 )
vframes = 4
hframes = 23
frame = 56

[node name="animate" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Idle = SubResource( 2 )
anims/Idle_climb = SubResource( 3 )
anims/climb = SubResource( 4 )
anims/fall = SubResource( 5 )
anims/jump_anim = SubResource( 6 )
anims/walk = SubResource( 7 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0.886482, -0.00274551 )
transform/scale = Vector2( 0.931809, 0.999811 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Sword_Area" type="Area2D" parent="."]

transform/pos = Vector2( 9.03742, -6.89698 )
input/pickable = true
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 0.236181, 0, 0, 0.236181, -24.5057, 7.15366 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 3 )
docked = true
Area_A_entered = false

[node name="Dock1" type="CollisionShape2D" parent="Sword_Area"]

transform/pos = Vector2( -24.5057, 7.15366 )
transform/scale = Vector2( 0.236181, 0.236181 )
shape = SubResource( 8 )
trigger = false
_update_shape_index = 0

[node name="Timer" type="Timer" parent="Sword_Area"]

process_mode = 1
wait_time = 0.2
one_shot = false
autostart = false

[node name="Sword_Area_b" type="Area2D" parent="."]

transform/pos = Vector2( -0.31556, -0.631118 )
input/pickable = true
shapes/0/shape = SubResource( 9 )
shapes/0/transform = Matrix32( 0.239672, -0.00252589, 0.00252589, 0.239672, 15.3389, 0.752137 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 4 )
docked = false
Area_B_entered = false

[node name="Dock2" type="CollisionShape2D" parent="Sword_Area_b"]

transform/pos = Vector2( 15.3389, 0.752137 )
transform/rot = 0.603815
transform/scale = Vector2( 0.239685, 0.239685 )
shape = SubResource( 9 )
trigger = false
_update_shape_index = 0

[node name="Timer" type="Timer" parent="Sword_Area_b"]

process_mode = 1
wait_time = 0.2
one_shot = false
autostart = false

[node name="sword" parent="." instance=ExtResource( 5 )]

transform/pos = Vector2( -15.364, -0.348899 )
transform/scale = Vector2( 0.198886, 0.317507 )

[node name="AnimationPlayer" parent="sword"]

anims/Switch = SubResource( 10 )
anims/switchb = SubResource( 11 )

[connection signal="body_enter" from="Sword_Area" to="Sword_Area" method="_on_Sword_Area_body_enter"]

[connection signal="body_exit" from="Sword_Area" to="Sword_Area" method="_on_Sword_Area_body_exit"]

[connection signal="timeout" from="Sword_Area/Timer" to="Sword_Area" method="_on_Timer_timeout"]

[connection signal="body_enter" from="Sword_Area_b" to="Sword_Area_b" method="_on_Sword_Area_b_body_enter"]

[connection signal="body_exit" from="Sword_Area_b" to="Sword_Area_b" method="_on_Sword_Area_b_body_exit"]

[connection signal="timeout" from="Sword_Area_b/Timer" to="Sword_Area_b" method="_on_Timer_timeout"]


[editable path="sword"]
